<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="top"
    tools:context=".MainActivity"
    android:background="@drawable/widget_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:background="@drawable/widget_background_title"
        android:id="@+id/title_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Uhuru Dashboard"
            android:id="@+id/widget_title"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/data_layout">

        <!--
        <TextView
            android:id="@+id/lib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/librairies"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/MD_Grey_700"
            android:layout_below="@+id/security_title"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/bin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/binaires"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/app"
            android:layout_alignParentStart="true"
            android:textColor="@color/MD_Grey_700" />

        <TextView
            android:id="@+id/app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/applications"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/lib"
            android:layout_alignParentStart="true"
            android:textColor="@color/MD_Grey_700" />
        -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/security"
            android:id="@+id/security_title"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/MD_Grey_800" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/security_events"
            android:id="@+id/security_events"
            android:textColor="@color/MD_Grey_700"
            android:layout_below="@+id/security_title"
            android:layout_alignStart="@+id/event_status_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/last_event"
            android:id="@+id/last_event_title"
            android:textColor="@color/MD_Grey_700"
            android:layout_below="@+id/security_events"
            android:layout_alignStart="@+id/security_events" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/events_status"
            android:id="@+id/event_status_title"
            android:textColor="@color/MD_Grey_700"
            android:layout_below="@+id/last_event_title"
            android:layout_alignStart="@+id/security_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/event_count"
            android:layout_alignBottom="@+id/security_events"
            android:layout_alignParentEnd="true"
            android:textColor="@color/MD_Grey_700" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/system"
            android:id="@+id/system_title"
            android:textColor="@color/MD_Grey_800"
            android:layout_marginTop="23dp"
            android:layout_below="@+id/event_status_title"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/current_version"
            android:id="@+id/system_version"
            android:textColor="@color/MD_Grey_700"
            android:layout_below="@+id/system_title"
            android:layout_alignStart="@+id/system_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/status"
            android:id="@+id/system_status"
            android:textColor="@color/MD_Grey_700"
            android:layout_below="@+id/system_version"
            android:layout_alignStart="@+id/system_version" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/last_event"
            android:layout_above="@+id/event_status_title"
            android:layout_alignParentEnd="true"
            android:textColor="@color/MD_Grey_700" />

        <ImageButton
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:id="@+id/event_status"
            android:layout_above="@+id/system_title"
            android:layout_alignParentEnd="true"
            android:background="@drawable/status_ok" />

    </RelativeLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Details"
        android:id="@+id/details"
        android:background="@drawable/fab_details"
        android:src="@drawable/ic_menu_white_24dp"
        android:padding="10dp"
        android:elevation="5dp"
        android:layout_below="@+id/title_layout"
        android:layout_alignEnd="@+id/data_layout"
        android:layout_marginTop="125dp"
        android:layout_marginRight="5dp" />

</RelativeLayout>